@@ -1,7 +1,15 @@
 # SankeyPlot for CPT111 CW3
 ## Usage
-Compile and run `CW3_2251804_SankeyDiagrams.java` with javafx VM
+Compile and run `CW3_2251804_SankeyDiagrams.java` with javafx VM:
+```
+cd SankeyPlot/
+mkdir out/
+cd out/
 
+javac -cp ../src/ -d ./ --module-path "_____\javafx-sdk-20.0.2\lib" --add-modules javafx.controls,javafx.fxml CW3_2251804_SankeyDiagrams.java
+
+java --module-path "_____\javafx-sdk-20.0.2\lib" --add-modules javafx.controls,javafx.fxml CW3_2251804_SankeyDiagrams
+```
 Type file path (.txt) in the text field, then generate
 
 https://github.com/SoySauceZhu/SankeyPlot
